further implementation: fixed top- and bottom, padding

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,6 +12,12 @@
                 <h1>Content!</h1>
             </p:outputPanel>
 
+            <p:outputPanel style="height:1024px;" styleClass="w3-padding">
+
+            </p:outputPanel>
+            Test
+
+
         </h:form>
     </ui:define>
 </ui:composition>
